--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   google_maps_flutter: ^2.2.0
+  geocoding: ^2.0.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
