--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dev_dependencies:
   google_maps_flutter: ^2.2.0
   geocoding: ^2.0.5
   geolocator: ^9.0.1
+  http: ^0.13.5
+  uuid: ^3.0.6
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
